Добавлены скриншоты в проекту Unique

--- a/projects/barbershop/index.html
+++ b/projects/barbershop/index.html
@@ -56,7 +56,7 @@
 
       <h4>Макет:</h4>
       
-      <ul class="popup-gallery">
+      <ul class="popup-gallery" designed="h-a">
         <li>
           <a href="/projects/barbershop/barbershop-index.jpg" title="Макет Барбершопа - главная страница">
             Макет Барбершопа - главная страница
