--- a/projects/gllacy/index.html
+++ b/projects/gllacy/index.html
@@ -67,7 +67,7 @@
       </details-->
       <h4>Макет:</h4>
       
-      <ul class="popup-gallery">
+      <ul class="popup-gallery" designed="h-a">
         <li>
           <a href="/projects/gllacy/gllacy-index-900.jpg" title="Макет Глейси 900 - главная страница">
             Главная страница 900px
