--- a/projects/unique/index.html
+++ b/projects/unique/index.html
@@ -54,6 +54,60 @@
           В связи с тем, в что в Laravel 8, службы аутентификации предоставляеются пакетам Jetstream и Fortify, админ.часть не предусматривает управление пользователями, кроме как регистрации, аутентификации и завершении сеанса, функционал которых создан самостоятельно. Также не предусмотрено управление ролями и доступом к различным секциям панели управления и правами на операции, в связи чем любой авторизованный пользователь имеет полный доступ к любым действиям, что в реальном проекте конечно не допустимо.
         </p>
       </details>
+
+      <h4>Скриншоты:</h4>
+      <ul class="popup-gallery">
+        <li>
+          <a href="/projects/unique/main.png" title="Главная страница">
+            Главная страница
+          </a>
+        </li>
+        <li>
+          <a href="/projects/unique/portfolio.jpg" title="Раздел Портфолио">
+            Раздел Портфолио
+          </a>
+        </li>
+        <li>
+          <a href="/projects/unique/admin-registration.jpg" title="Регистрация">
+            Регистрация
+          </a>
+        </li>
+        <li>
+          <a href="/projects/unique/admin-auth.jpg" title="Авторизация">
+            Авторизация
+          </a>
+        </li>
+        <li>
+          <a href="/projects/unique/admin-pages.jpg" title="Панель управления - список динамичных страниц">
+            Панель управления - список динамичных страниц
+          </a>
+        </li>
+        <li>
+          <a href="/projects/unique/admin-page-edit.jpg" title="Панель управления - редактирование страницы">
+            Панель управления - редактирование страницы
+          </a>
+        </li>
+        <li>
+          <a href="/projects/unique/admin-services.jpg" title="Панель управления - список услуг">
+            Панель управления - список услуг
+          </a>
+        </li>
+        <li>
+          <a href="/projects/unique/admin-portfolio.jpg" title="Панель управления - список работ в портфолио">
+            Панель управления - список работ в портфолио
+          </a>
+        </li>
+        <li>
+          <a href="/projects/unique/admin-peoples.jpg" title="Панель управления - команда">
+            Панель управления - команда
+          </a>
+        </li>
+        <li>
+          <a href="/projects/unique/admin-peoples-add.jpg" title="Панель управления - добавление в команду">
+            Панель управления - добавление в команду
+          </a>
+        </li>
+      </ul>
   </div>
 
   <!-- Magnific Popup core CSS file -->
