Добавлены скриншоты в проекту Yeticave

--- a/projects/yeticave/index.html
+++ b/projects/yeticave/index.html
@@ -71,6 +71,75 @@
           </li>
         </ol>
       </details>
+
+      <h4>Скриншоты:</h4>
+      <ul class="popup-gallery" designed="h-a">
+        <li>
+          <a href="/projects/yeticave/scr-main.png" title="Главная страница">
+            Главная страница
+          </a>
+        </li>
+        <li>
+          <a href="/projects/yeticave/scr-boots.png" title="Лоты в категории «Ботинки»">
+            Лоты в категории «Ботинки»
+          </a>
+        </li>
+        <li>
+          <a href="/projects/yeticave/scr-tools.png" title="Лоты в категории Инструменты">
+            Лоты в категории Инструменты
+          </a>
+        </li>
+        <li>
+          <a href="/projects/yeticave/scr-registration.png" title="Регистрация нового аккаунта">
+            Регистрация нового аккаунта
+          </a>
+        </li>
+        <li>
+          <a href="/projects/yeticave/scr-auth.png" title="Авторизация">
+            Авторизация
+          </a>
+        </li>
+        <li>
+          <a href="/projects/yeticave/scr-user-welcome.png" title="Приветствие авторизованного пользователя">
+            Приветствие авторизованного пользователя
+          </a>
+        </li>
+        <li>
+          <a href="/projects/yeticave/scr-user-add-lot.png" title="Добавление лота">
+            Добавление лота
+          </a>
+        </li>
+        <li>
+          <a href="/projects/yeticave/scr-user-profile.png" title="Профиль пользователя">
+            Профиль пользователя
+          </a>
+        </li>
+        <li>
+          <a href="/projects/yeticave/scr-user-lots.png" title="Лоты пользователя">
+            Лоты пользователя
+          </a>
+        </li>
+        <li>
+          <a href="/projects/yeticave/scr-user-lots-win.png" title="Лоты пользователя с законченными торгами">
+            Лоты пользователя
+          </a>
+        </li>
+        <li>
+          <a href="/projects/yeticave/scr-user-bids.png" title="Cтавки пользователя">
+            Ставки пользователя
+          </a>
+        </li>
+        <li>
+          <a href="/projects/yeticave/scr-user-bids-win.png" title="Выигранные ставки пользователя">
+            Ставки пользователя
+          </a>
+        </li>
+        <li>
+          <a href="/projects/yeticave/scr-user-views.png" title="История просмотров">
+            История просмотров
+          </a>
+        </li>
+      </ul>
   </div>
 
   <!-- Magnific Popup core CSS file -->
