Разделение стилей по назначению, очистка от дублей и неиспользуемых элементов

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <meta name="Copyright" content="Харитов Андрей Владимирович">
   <title>Харитов Андрей, портфолио. PHP-программист.</title>
 
-  <link rel="stylesheet" href="css/r-normalize-min.v8.0.1-2.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/avx-normalize.css">
   <link rel="stylesheet" href="css/basis.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 
 <body id="home">
@@ -432,7 +432,7 @@
                     <i class="fa fa-external-link"></i>
                   </a> )
                 </span>
-                <div class="hidden">
+                <div hidden>
                   JS - https://www.sololearn.com/Certificate/-16609287/pdf/<br>
                   jQuery - https://www.sololearn.com/Certificate/-16609287/pdf/
                 </div>
