--- a/projects/mts/index.html
+++ b/projects/mts/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/r-normalize-min.v8.0.1-2.css">
-  <link rel="stylesheet" href="/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/avx-normalize.css">
   <link rel="stylesheet" href="/css/basis.css">
   <link rel="stylesheet" href="/css/projects.css">
+  <link rel="stylesheet" href="/css/font-awesome.min.css">
 </head>
 <body>
   <div id="custom-content" class="white-popup-block">
