Добавлена favicon для различных типов устройств

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <meta name="Copyright" content="Харитов Андрей Владимирович">
   <title>Харитов Андрей, портфолио. PHP-программист.</title>
 
+  <meta name="theme-color" content="#ffffff">
+  <link rel="icon" href="favicon.svg" sizes="any">
+  <link rel="icon" href="favicon16.png" sizes="16x16" type="image/png">
+  <link rel="icon" href="favicon32.png" sizes="32x32" type="image/png">
+  <link rel="mask-icon" href="/img/favicon-safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" href="/img/favicon-apple-touch-icon.png" sizes="180x180">
+  <link rel="manifest" href="manifest.json">
+
   <link rel="stylesheet" href="css/avx-normalize.css">
   <link rel="stylesheet" href="css/basis.css">
   <link rel="stylesheet" href="css/index.css">
