Кэширование статики в htaccess и предзагрузка шрифтов в хедере страниц

--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@
   <link rel="apple-touch-icon" href="/img/favicon-apple-touch-icon.png" sizes="180x180">
   <link rel="manifest" href="manifest.json">
 
+  <link rel="preload" href="/css/font-awesome.min.css" as="style" crossorigin>
+  <link rel="preload" href="/css/font-awesome/fontawesome-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin>
+
   <link rel="stylesheet" href="css/avx-normalize.css">
   <link rel="stylesheet" href="css/basis.css">
   <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 
 <body id="home">
