--- a/projects/gllacy/index.html
+++ b/projects/gllacy/index.html
@@ -3,10 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta name="theme-color" content="#ffffff">
+  <link rel="icon" href="/favicon.svg" sizes="any">
+  <link rel="icon" href="/favicon16.png" sizes="16x16" type="image/png">
+  <link rel="icon" href="/favicon32.png" sizes="32x32" type="image/png">
+  <link rel="mask-icon" href="/img/favicon-safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" href="/img/favicon-apple-touch-icon.png" sizes="180x180">
+  <link rel="manifest" href="/manifest.json">
+
+  <title>Личный проект «Глейси»</title>
+
+  <link rel="preload" href="/css/font-awesome.min.css" as="style" crossorigin>
+  <link rel="preload" href="/css/font-awesome/fontawesome-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmEU9fABc4EsA.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu5mxKOzY.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/css/font-roboto/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/css/font-roboto/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin>
+
   <link rel="stylesheet" href="/css/avx-normalize.css">
   <link rel="stylesheet" href="/css/basis.css">
   <link rel="stylesheet" href="/css/projects.css">
-  <link rel="stylesheet" href="/css/font-awesome.min.css">
 </head>
 <body>
   <div id="custom-content" class="white-popup-block">
